--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
 		<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br />
 		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
-		<a href="papers/identifiabilityPPS.pdf">.pdf</a>]
+		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>]
 		
 		</td>
 	</tr>
@@ -131,7 +131,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
       The asymptotic properties of polynomial phase estimation by least
       squares phase unwrapping.
-      accepted to <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, 2011.<br />
+     <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages 3592-3595, May 2011. <br />
       [&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a>&nbsp;]
 
     </td>
