--- a/robby_bib.html
+++ b/robby_bib.html
@@ -27,6 +27,26 @@
 }
 </pre>
 
+<a name="Quinn_snpe_dasp_2011"></a><pre>
+@inproceedings{<a href="robby.html#Quinn_snpe_dasp_2011">Quinn_snpe_dasp_2011</a>,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  title = {Estimating period from sparse, noisy timing data},
+  year = 2011,
+  booktitle = {Defence App. Sig. Proc.},
+  month = {July}
+}
+</pre>
+
+<a name="McKilliam_direstcro_dasp_2011"></a><pre>
+@inproceedings{<a href="robby.html#McKilliam_direstcro_dasp_2011">McKilliam_direstcro_dasp_2011</a>,
+  author = {R. G. McKilliam and B. G. Quinn},
+  title = {Estimating the circular mean from correlated observations},
+  year = 2011,
+  booktitle = {Defence App. Sig. Proc.},
+  month = {July}
+}
+</pre>
+
 <a name="McKilliam_polyphase_est_icassp_2011"></a><pre>
 @article{<a href="robby.html#McKilliam_polyphase_est_icassp_2011">McKilliam_polyphase_est_icassp_2011</a>,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
@@ -34,7 +54,7 @@
   title = {The asymptotic properties of polynomial phase estimation by least squares phase unwrapping},
   year = 2011,
   month = {May},
-  pages = {3592 - 3595},
+  pages = {3592-3595},
   doi = {10.1109/ICASSP.2011.5946255},
   issn = {1520-6149}
 }
