--- a/robby.html
+++ b/robby.html
@@ -34,14 +34,42 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam_polyphase_est_icassp_2011">2</a>]
+[<a name="Quinn_snpe_dasp_2011">2</a>]
+</td>
+<td class="bibtexitem">
+B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
+ Estimating period from sparse, noisy timing data.
+ In <em>Defence App. Sig. Proc.</em>, July 2011.
+[&nbsp;<a href="robby_bib.html#Quinn_snpe_dasp_2011">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_direstcro_dasp_2011">3</a>]
+</td>
+<td class="bibtexitem">
+R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
+ Estimating the circular mean from correlated observations.
+ In <em>Defence App. Sig. Proc.</em>, July 2011.
+[&nbsp;<a href="robby_bib.html#McKilliam_direstcro_dasp_2011">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="McKilliam_polyphase_est_icassp_2011">4</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
  The asymptotic properties of polynomial phase estimation by least
   squares phase unwrapping.
- <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages 3592 -
-  3595, May 2011.
+ <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages
+  3592-3595, May 2011.
 [&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a>&nbsp;| 
 <a href="http://dx.doi.org/10.1109/ICASSP.2011.5946255">DOI</a>&nbsp;]
 
@@ -51,7 +79,7 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2007">3</a>]
+[<a name="McKilliam2007">5</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -67,7 +95,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamLinearTimeBlockPSK2009">4</a>]
+[<a name="McKilliamLinearTimeBlockPSK2009">6</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, D.&nbsp;J. Ryan, and I.&nbsp;B. Collings.
@@ -87,7 +115,7 @@ We propose a new algorithm for noncoherent sequence detection of M-ary phase-shi
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">5</a>]
+[<a name="McKilliam2009IndentifiabliltyAliasingPolyphase">7</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -102,7 +130,7 @@ R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009asilomar_polyest_lattice">6</a>]
+[<a name="McKilliam2009asilomar_polyest_lattice">8</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
@@ -118,7 +146,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010_block_noncoherent_hex">7</a>]
+[<a name="McKilliam2010_block_noncoherent_hex">9</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -133,7 +161,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2006">8</a>]
+[<a name="McKilliam2006">10</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
@@ -148,7 +176,7 @@ R.&nbsp;G. McKilliam and G.&nbsp;Wyeth.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008">9</a>]
+[<a name="McKilliam2008">11</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
@@ -164,7 +192,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008b">10</a>]
+[<a name="McKilliam2008b">12</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp;G. Quinn.
@@ -180,7 +208,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W.&nbsp;D. Smith, and B.&nbsp
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2008a">11</a>]
+[<a name="McKilliam2008a">13</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
@@ -197,7 +225,7 @@ R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2009CoxeterLattices">12</a>]
+[<a name="McKilliam2009CoxeterLattices">14</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
@@ -215,7 +243,7 @@ R.&nbsp;G. McKilliam, W.&nbsp;D. Smith, and I.&nbsp;V.&nbsp;L. Clarkson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliam2010thesis">13</a>]
+[<a name="McKilliam2010thesis">15</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam.
@@ -230,7 +258,7 @@ R.&nbsp;G. McKilliam.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">14</a>]
+[<a name="McKilliamFrequencyEstimationByPhaseUnwrapping2009">16</a>]
 </td>
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;Moran.
@@ -251,7 +279,7 @@ Keywords: Central limit theorem, frequency estimation, lattices, nearest lattice
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Quinn2008maximizing_the_periodogram">15</a>]
+[<a name="Quinn2008maximizing_the_periodogram">17</a>]
 </td>
 <td class="bibtexitem">
 B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
