Added DASP2011 paper.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 
 <table cellpadding="4" cellspacing="0" width="600" >
 
-  <!-- <tr valign="top">
+   <tr valign="top">
     <td>
       R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
       Estimating the circular mean from correlated observations.
@@ -116,7 +116,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       <a href="papers/circmeancorr.pdf">.pdf</a>&nbsp;]
   </tr>
 
-
+<!--
   <tr valign="top">
     <td>
       B.&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and R.&nbsp;G. McKilliam.
