Added errata for thesis.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
   <em>Lattice theory, circular statistics and polynomial phase
   signals</em>.
   PhD thesis, University of Queensland, Australia, December 2010.<br />
-[ <a href="./robby_bib.html#McKilliam2010thesis">bib</a> | <a href="papers/thesis.pdf">pdf</a> ] <br>
+[ <a href="./robby_bib.html#McKilliam2010thesis">bib</a> | <a href="papers/thesis.pdf">pdf</a> | <a href="papers/errata.pdf">errata</a> ] <br>
 	</td>
 	</tr>
 </table>
@@ -111,7 +111,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
     <td>
       R.&nbsp;G. McKilliam and B.&nbsp;G. Quinn.
       Estimating the circular mean from correlated observations.
-      In <em>Defence App. Sig. Proc.</em>, July 2011.
+      In <em>Defence App. Sig. Proc.</em>, July 2011. <br />
       [&nbsp;<a href="robby_bib.html#McKilliam_direstcro_dasp_2011">bib</a>&nbsp;| 
       <a href="papers/circmeancorr.pdf">.pdf</a>&nbsp;]
   </tr>
