--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 		R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
 		Identifiability and aliasing in polynomial-phase signals.
 		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
-		<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br />
+	<!--	<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br /> -->
 		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
 		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>]
 		
