--- a/index.html
+++ b/index.html
@@ -47,25 +47,23 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <br>
 <b>Journal Papers </b>
 <table cellpadding="4" cellspacing="0" width="600" >
-	<tr valign="top">
-		<td>
-		R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
-  		An algorithm to compute the nearest point in the lattice <em>A</em><sub>n</sub><sup>*</sup>.
-  		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.<br />
-		[ <a href="./robby_bib.html#McKilliam2008">bib</a> 
-		| <a href="http://dx.doi.org/10.1109/TIT.2008.928280">doi</a>
-		| <a href="http://arxiv.org/abs/0801.1364">arxiv</a> ]
+
+<tr valign="top">
+	<td>
+	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
+	 Direction estimation by minimum squared arc length.
+	 submitted to <em>IEEE Trans. Signal Process.</em>, Mar. 2011.<br />
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 	</td>
 	</tr>
+
 	<tr valign="top">
 		<td>
-		R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
-		Identifiability and aliasing in polynomial-phase signals.
-		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
-	<!--	<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br /> -->
-		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
-		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>]
-		
+		R.&nbsp;G. McKilliam, Barry&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and Bill Moran.
+		  Frequency estimation by phase unwrapping.
+		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.</br>
+		[ <a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a> | 
+		  <a href="http://dx.doi.org/10.1109/TSP.2010.2045786">doi</a> | <a href="http://github.com/robbymckilliam/frequency_estimation_by_phase_unwrapping">code</a>&nbsp;]
 		</td>
 	</tr>
 	
@@ -82,21 +80,24 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 	
 	<tr valign="top">
 		<td>
-		R.&nbsp;G. McKilliam, Barry&nbsp;G. Quinn, I.&nbsp;V.&nbsp;L. Clarkson, and Bill Moran.
-		  Frequency estimation by phase unwrapping.
-		  <em>IEEE Trans. Signal Process.</em>, 58(6):2953-2963, June 2010.</br>
-		[ <a href="./robby_bib.html#McKilliamFrequencyEstimationByPhaseUnwrapping2009">bib</a> | 
-		  <a href="http://dx.doi.org/10.1109/TSP.2010.2045786">doi</a> | <a href="http://github.com/robbymckilliam/frequency_estimation_by_phase_unwrapping">code</a>&nbsp;]
+		R.&nbsp;G. McKilliam and I.&nbsp;V.&nbsp;L. Clarkson.
+		Identifiability and aliasing in polynomial-phase signals.
+		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
+	<!--	<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br /> -->
+		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
+		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>]
+		
 		</td>
 	</tr>
 
 	<tr valign="top">
-	<td>
-	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
-	 Direction estimation by minimum squared arc length.
-	 submitted to <em>IEEE Trans. Signal Process.</em>, Mar. 2011.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
-
+		<td>
+		R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, and B.&nbsp;G. Quinn.
+  		An algorithm to compute the nearest point in the lattice <em>A</em><sub>n</sub><sup>*</sup>.
+  		<em>IEEE Trans. Inform. Theory</em>, 54(9):4378-4381, Sep. 2008.<br />
+		[ <a href="./robby_bib.html#McKilliam2008">bib</a> 
+		| <a href="http://dx.doi.org/10.1109/TIT.2008.928280">doi</a>
+		| <a href="http://arxiv.org/abs/0801.1364">arxiv</a> ]
 	</td>
 	</tr>
 
@@ -132,7 +133,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       The asymptotic properties of polynomial phase estimation by least
       squares phase unwrapping.
      <em>Proc. Internat. Conf. Acoust. Spe. Sig. Process.</em>, pages 3592-3595, May 2011. <br />
-      [&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a>&nbsp;]
+      [&nbsp;<a href="robby_bib.html#McKilliam_polyphase_est_icassp_2011">bib</a> | <a href="http://dx.doi.org/10.1109/ICASSP.2011.5946255">doi</a>&nbsp;]
 
     </td>
   </tr>
