--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       R.&nbsp;G. McKilliam, D.&nbsp;J. Ryan, I.&nbsp;V.&nbsp;L. Clarkson, and I.&nbsp;B. Collings.
       Block noncoherent detection of hexagonal QAM.
       <em>in Proc. Australian Commun. Theory Workshop</em>, pages 65-70, Feb. 2010.<br />
-      [&nbsp;<a href="robby_bib.html#McKilliam2010_block_noncoherent_hex">bib</a>&nbsp;]
+      [&nbsp;<a href="robby_bib.html#McKilliam2010_block_noncoherent_hex">bib</a> | <a href="http://dx.doi.org/10.1109/AUSCTW.2010.5426763">doi</a>&nbsp;]
 
     </td>
   </tr>
@@ -157,7 +157,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       accepted for <em>Asilomar Conference on Signals, Systems, and
 	Computers</em>, 2009.<br />
       [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| 
-      <a href="papers/asilomar_polyphase_est.pdf">.pdf</a>&nbsp;]	
+      <a href="papers/asilomar_polyphase_est.pdf">.pdf</a> | <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;]	
     </td>
   </tr>
 
@@ -180,7 +180,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       estimation from sparse, noisy timing data. <em>Proc. Internat. Conf. 
 	Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.<br />
       [ <a href="robby_bib.html#McKilliam2007">bib</a> |
-      <a href="papers/ICASSP_SNPE.pdf">.pdf</a>]
+      <a href="http://dx.doi.org/10.1109/ICASSP.2008.4518455">doi</a>]
       
     </td>
   </tr>
@@ -190,7 +190,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       An improved algorithm for optimal noncoherent QAM detection. <em>Proc. 
 	Austral. Comm. Theory Workshop</em>, pages 64-68, Jan 2008.<br>
       [ <a href="robby_bib.html#McKilliam2008a">bib</a> |
-      <a href="papers/qamreceiver.pdf">.pdf</a> ]
+      <a href="http://dx.doi.org/10.1109/AUSCTW.2008.4460823">doi</a> ]
 
     </td>
   </tr>
@@ -212,7 +212,7 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
   Maximizing the periodogram.
   <em>IEEE GLOBECOM</em>, pages 1-5, Dec 2008.<br />
 [ <a href="./robby_bib.html#Quinn2008maximizing_the_periodogram">bib</a> | 
-<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4698443">http</a> ]
+<a href="http://dx.doi.org/10.1109/GLOCOM.2008.ECP.668">doi</a> ]
 
     </td>
     </tr>
