--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
       point problem.
       accepted for <em>Asilomar Conference on Signals, Systems, and
 	Computers</em>, 2009.<br />
-      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| 
-      <a href="papers/asilomar_polyphase_est.pdf">.pdf</a> | <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;]	
+      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;]	
     </td>
   </tr>
 
@@ -169,8 +168,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 	Acoust. Speech Signal Process.</em>,
       pages 2465-2468, April 2009. <br />
       [&nbsp;<a href="robby_bib.html#4960121">bib</a>&nbsp;| 
-      <a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">doi</a>&nbsp;| 
-      <a href="papers/ICASSP_linear_time_psk_2009.pdf">.pdf</a>&nbsp;]
+      <a href="http://dx.doi.org/10.1109/ICASSP.2009.4960121">doi</a>&nbsp;]
     </td>
   </tr>
 
