--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
       Estimating the circular mean from correlated observations.
       In <em>Defence App. Sig. Proc.</em>, July 2011. <br />
       [&nbsp;<a href="robby_bib.html#McKilliam_direstcro_dasp_2011">bib</a>&nbsp;| 
-      <a href="papers/circmeancorr.pdf">.pdf</a>&nbsp;]
+      <a href="papers/circmeancorr.pdf">pdf</a>&nbsp;]
   </tr>
 
 <!--
@@ -160,12 +160,12 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 
   <tr valign="top">
     <td>
-      R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, Barry&nbsp;G. Quinn, and Bill Moran.
-      Polynomial-phase estimation, phase unwrapping and the nearest lattice
-      point problem.
-      accepted for <em>Asilomar Conference on Signals, Systems, and
-	Computers</em>, 2009.<br />
-      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;]	
+      R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, B.&nbsp;G. Quinn, and B.&nbsp;Moran.
+ Polynomial-phase estimation, phase unwrapping and the nearest lattice
+  point problem.
+ <em>Asilomar Conference on Signals, Systems, and Computers</em>, pages
+  493-495, Nov. 2009. <br />
+      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;| <a href="papers/asilomar_polyphase_est.pdf">pdf</a>]	
     </td>
   </tr>
 
@@ -208,7 +208,7 @@ R.&nbsp;G. McKilliam, I.&nbsp;V.&nbsp;L. Clarkson, W. D. Smith and B.&nbsp;G. Qu
   A linear-time nearest point algorithm for the lattice <em>A</em><sub>n</sub><sup>*</sup>. <em>International Symposium on Information Theory
   and its Applications</em>, 2008.<br />
 [ <a href="./robby_bib.html#McKilliam2008b">bib</a> |
-<a href="papers/ISITA_Anstar.pdf">.pdf</a>]
+<a href="papers/ISITA_Anstar.pdf">pdf</a>&nbsp;]
 
 </td>
 </tr>
@@ -230,8 +230,7 @@ B.&nbsp;G. Quinn, R.&nbsp;G. McKilliam, and I.&nbsp;V.&nbsp;L. Clarkson.
 		for spheres. <em>Proc. Australasian Conference on Robotics and 
 		Automation</em>, 2006.<br>
 		[ <a href="robby_bib.html#McKilliam2006">bib</a> |
-		<a href="http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf">.pdf</a> 
-		]
+		<a href="http://www.araa.asn.au/acra/acra2006/papers/paper_5_62.pdf">pdf</a>&nbsp;]
 
 		</td>
 	</tr>
