--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		  <em>IEEE Trans. Inform. Theory</em>, 56(3):1015-1022, Mar. 2010.<br />
 		[ <a href="./robby_bib.html#McKilliam2009CoxeterLattices">bib</a> 
 		| <a href="http://dx.doi.org/10.1109/TIT.2009.2039090">doi</a> 
-		| <a href="http://arxiv.org/abs/0903.0673">arxiv</a>]
+		| <a href="http://arxiv.org/abs/0903.0673">arxiv</a>&nbsp;]
 		</td>
 	</tr>
 	
@@ -94,7 +94,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 		<em>IEEE Trans. Signal Process.</em>, 57(11):4554-4557, Nov. 2009.<br />
 	<!--	<b>Winner:</b> Canon Information Systems Research Australia (CiSRA) best paper prize 2010. <br /> -->
 		[ <a href="./robby_bib.html#McKilliam2009IndentifiabliltyAliasingPolyphase">bib</a> |
-		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>]
+		<a href="http://dx.doi.org/10.1109/TSP.2009.2026511">doi</a>&nbsp;]
 		
 		</td>
 	</tr>
@@ -165,7 +165,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
   point problem.
  <em>Asilomar Conference on Signals, Systems, and Computers</em>, pages
   493-495, Nov. 2009. <br />
-      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;| <a href="papers/asilomar_polyphase_est.pdf">pdf</a>]	
+      [ <a href="./robby_bib.html#McKilliam2009asilomar_polyest_lattice">bib</a>&nbsp;| <a href="http://dx.doi.org/10.1109/ACSSC.2009.5469871">doi</a>&nbsp;| <a href="papers/asilomar_polyphase_est.pdf">pdf</a>&nbsp;]	
     </td>
   </tr>
 
@@ -187,7 +187,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
       estimation from sparse, noisy timing data. <em>Proc. Internat. Conf. 
 	Acoust. Speech Signal Process.</em>, pages 3697-3700, March 2008.<br />
       [ <a href="robby_bib.html#McKilliam2007">bib</a> |
-      <a href="http://dx.doi.org/10.1109/ICASSP.2008.4518455">doi</a>]
+      <a href="http://dx.doi.org/10.1109/ICASSP.2008.4518455">doi</a>&nbsp;]
       
     </td>
   </tr>
