--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@ Software for running simulations related to the papers above (and more!) is avai
 <br>
 <b>Other Activities</b>
 <table>
+<tr valign="top"><td>Technical Programme Committee, Australian Communications Theory Workshop (AusCTW), 2012</td></tr>
 <tr valign="top"><td>Publications Co-Chair, Defense Applications of Signal Processing Workshop (DASP), 2011</td></tr>
 <tr valign="top"><td>Chair of the IEEE University of Queensland Student Branch 2009</td></tr>
 <!--<tr valign="top"><td>Robby manages two open source software projects.&nbsp;
