made direst paper accepted.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 	<td>
 	R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 	 Direction estimation by minimum squared arc length.
-	 submitted to <em>IEEE Trans. Signal Process.</em>, Mar. 2011.<br />
+	 accepted to <em>IEEE Trans. Signal Process.</em>, Mar. 2011.<br />
 	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://github.com/robbymckilliam/direction_estimation_by_minimum_squared_arc_length">code</a>&nbsp;]
 	</td>
 	</tr>
