--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
  submitted to <em>IEEE Trans. Inform. Theory</em>, Nov. 2011.<br />
-	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="https://github.com/robbymckilliam/An_lattice_error_probability">code</a> | <a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp;]
+	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp; | code: <a href="https://github.com/robbymckilliam/An_lattice_error_probability">git</a>&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">zip</a>]
 </td>
 </tr>
 
