--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Robby McKilliam is at the Institute for Telecommunications Research at the Unive
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
- submitted to <em>IEEE Trans. Inform. Theory</em>, Nov. 2011.<br />
+ accepted to <em>IEEE Trans. Inform. Theory</em>, Apr. 2012.<br />
 	[&nbsp;<a href="robby_bib.html#McKilliam_mean_dir_est_sq_arc_length2010">bib</a> | <a href="http://arxiv.org/abs/1111.6334">arxiv</a>&nbsp; | code: <a href="https://github.com/robbymckilliam/An_lattice_error_probability">git</a>&nbsp;<a href="https://github.com/robbymckilliam/An_lattice_error_probability">zip</a>]
 </td>
 </tr>
@@ -123,8 +123,8 @@ R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;
 <td>
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
  Finding short vectors in a lattice of Voronoi's first kind.
- submitted to the International Symposium on Information Theory
-  (ISIT), Jan. 2012. <br />
+ accepted to the International Symposium on Information Theory
+  (ISIT), Aprl. 2012. <br />
 [&nbsp;<a href="robby_bib.html#McKilliam_short_vectors_first_type_isit_2012">bib</a> 
 |&nbsp;<a href="http://arxiv.org/abs/1201.5154">arxiv</a>&nbsp;]
 
