--- a/robby.html
+++ b/robby.html
@@ -39,8 +39,8 @@ R.&nbsp;G. McKilliam, B.&nbsp;G. Quinn, and I.&nbsp;V.&nbsp;L. Clarkson.
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam and A.&nbsp;Grant.
  Finding short vectors in a lattice of Voronoi's first kind.
- submitted to the International Symposium on Information Theory
-  (ISIT), Jan. 2012.
+ accepted to the International Symposium on Information Theory (ISIT),
+  Apr. 2012.
 [&nbsp;<a href="robby_bib.html#McKilliam_short_vectors_first_type_isit_2012">bib</a>&nbsp;]
 
 </td>
@@ -70,8 +70,9 @@ J.&nbsp;Kodithuwakku, N.&nbsp;A. Letzepiz, A.&nbsp;Grant, and R.&nbsp;G. McKilli
 <td class="bibtexitem">
 R.&nbsp;G. McKilliam, R.&nbsp;Subramanian, E.&nbsp;Viterbo, and I.&nbsp;V.&nbsp;L. Clarkson.
  On the error performance of the <em>A</em><sub>n</sub> lattices.
- <em>CoRR</em>, abs/1111.6334, 2011.
-[&nbsp;<a href="robby_bib.html#McKilliam_error_prob_An2012">bib</a>&nbsp;]
+ accepted to IEEE Trans. Inf. Th., Apr. 2012.
+[&nbsp;<a href="robby_bib.html#McKilliam_error_prob_An2012">bib</a>&nbsp;| 
+<a href="http://arxiv.org/abs/1111.6334">http</a>&nbsp;]
 
 </td>
 </tr>
