--- a/robby_bib.html
+++ b/robby_bib.html
@@ -31,9 +31,9 @@
 @unpublished{<a href="robby.html#McKilliam_short_vectors_first_type_isit_2012">McKilliam_short_vectors_first_type_isit_2012</a>,
   author = {R. G. McKilliam and A. Grant},
   title = {Finding short vectors in a lattice of {Voronoi's} first kind},
-  note = {submitted to the International Symposium on Information Theory (ISIT)},
+  note = {accepted to the International Symposium on Information Theory (ISIT)},
   year = 2012,
-  month = {Jan.}
+  month = {Apr.}
 }
 </pre>
 
@@ -48,17 +48,16 @@
 </pre>
 
 <a name="McKilliam_error_prob_An2012"></a><pre>
-@article{<a href="robby.html#McKilliam_error_prob_An2012">McKilliam_error_prob_An2012</a>,
+@unpublished{<a href="robby.html#McKilliam_error_prob_An2012">McKilliam_error_prob_An2012</a>,
   author = {R. G. McKilliam and
                R. Subramanian and
                E. Viterbo and
                I. V. L. Clarkson},
   title = {On the error performance of the ${A}_{n}$ lattices},
-  journal = {CoRR},
-  volume = {abs/1111.6334},
-  year = 2011,
-  ee = {<a href="http://arxiv.org/abs/1111.6334">http://arxiv.org/abs/1111.6334</a>},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  note = {accepted to IEEE Trans. Inf. Th.},
+  month = {Apr.},
+  year = 2012,
+  url = {<a href="http://arxiv.org/abs/1111.6334">http://arxiv.org/abs/1111.6334</a>}
 }
 </pre>
 
